[package]
name = "halo-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "halo-world"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
hyper = { version = "0.14.27", features = ["http1", "server"] }
tokio = { version = "1.32.0", features = ["macros", "rt", "net"] }

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
